# deepagent-azure-cli

./: .env.example  .env.local.example  .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  custom_tools.py
src/deepagent_azure_cli/: __init__.py  agent.py  cli.py  config.py  interaction_logger.py  repl.py
src/deepagent_azure_cli/tui/: __init__.py  app.py  events.py  hitl.py  renderer.py  widgets.py
